fixed spacing

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 main {
   padding: 100px 20% 0px 20%;
   display: grid;
-  grid-template-rows: repeat(39, 10vh);
+  grid-template-rows: repeat(40, 10vh);
   padding-bottom: 0;
   position: relative;
 }
@@ -15,7 +15,7 @@ header {
 }
 
 .contentSize {
-  grid-row: span 8;
+  grid-row: span 9;
 }
 
 #intro {
